# esi-rust

./: Cargo.toml  README.md
src/auth/: login.rs  mod.rs  sso_login.rs
src/client/: mod.rs  scopes.rs
src/http/: callback.rs  client.rs  mod.rs
