[package]
name = "esi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
hyper = { version = "0.14.27", features = ["server"] }
tokio = { version = "1", features = ["full"] }
oauth2 = "4.4.2"
open = "5.0.0"
rand = "0.8.5"
reqwest = "0.11.20"
urlencoding = "2.1.3"
url = "2.4.1"
